# ganjiclaw

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  configlist.txt
apps/tauri/: tauri.conf.json
crates/zeroclaw-activity-archive/: Cargo.toml
crates/zeroclaw-activity-archive/src/: collector.rs  lib.rs  normalizer.rs  notion_sync.rs  privacy.rs  runtime.rs  schema.rs  sessionizer.rs  summarizer.rs
crates/zeroclaw-activity-archive/src/collectors/: browser_history.rs  file_activity.rs  mod.rs  process_launch.rs  shell_activity.rs  window_focus.rs
crates/zeroclaw-activity-archive/tests/: collector_tests.rs  collector_tests.rs.pending_migration  integration_tests.rs  integration_tests.rs.pending_migration  normalizer_tests.rs  normalizer_tests.rs.pending_migration  notion_sync_tests.rs  notion_sync_tests.rs.pending_migration  privacy_tests.rs  privacy_tests.rs.pending_migration  schema_tests.rs  sessionizer_tests.rs  sessionizer_tests.rs.pending_migration  summarizer_tests.rs  summarizer_tests.rs.pending_migration
crates/zeroclaw-channels/: Cargo.toml
crates/zeroclaw-gateway/: Cargo.toml
crates/zeroclaw-infra/: Cargo.toml
crates/zeroclaw-memory/: Cargo.toml
crates/zeroclaw-runtime/: Cargo.toml
crates/zeroclaw-tools/: Cargo.toml
docs/development/: zeroclaw-activity-archive-checklist.md  zeroclaw-activity-archive-remaining.md
src/: lib.rs  main.rs  migration.rs
src/agent/: loop_.rs
src/channels/: mod.rs
web/: eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  typecheck.txt  vite.config.ts
(+75 files in other folders)
