[package]
name = "zeroclaw-activity-archive"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"

[dependencies]
# Async runtime
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "time", "sync"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }

# Time handling
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }

# UUID generation
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }

# Logging
tracing = { version = "0.1", default-features = false }

# Concurrency
parking_lot = "0.12"

# Async traits
async-trait = "0.1"

# Futures
futures = "0.3"

# Additional dependencies
glob = "0.3"
async-stream = "0.3"
url = "2.5"
regex = "1.10"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_EventLog",
    "Win32_System_ProcessStatus",
] }
windows-service = "0.8"
notify = "6.1"

[dev-dependencies]
tempfile = "3.26"
